2005-03-06  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/tclxkeylist.c:
	* nsd/tclcmds.c: added objectified version of TclX keyed lists.

2005-03-05  Vlad Seryakov <vlad@crystalballinc.com>

	* nsd/conn.c include/ns.h Add Ns_ConnSetResponseStatus command to
        be able to se response status without touching headers. Also
        ns_conn status has been extended with ability to set response 
        status if third argument is provided. ns_conn status ?newStatus?

        * nslog/nslog.c: changed syntax to conform naviserver style,
        no functional modifications

2005-03-04  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclobjv.c: Add support for boolean options which take no
	argument. Truth is determined by presence of the option alone.

2005-03-01  Vlad Seryakov <vlad@crystalballinc.com>

	* nslog/nslog.c: redone options support for the module
        using flags, added commands to ns_accesslog to change flags and/or
        extended headers on the fly 

2005-02-27  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclobjv.c: Short circuit option processing when "--" is found.
	Accurately describe optional arguments as optional in error messages.

	* include/ns.h:
	* nsd/form.c:
	* nsd/request.c:
	* nsd/urlencode: Decode + and other characters in URL paths
	correctly.  Fixes bug #1145277.

	* nsd/mimetypes.c: XML mime types changed to application/xml from
	text/xml, fixes bug #1145927.  Added a handful of new mime
	mappings.

2005-02-26  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/tclobjv.c: New file with objv argument parsing code

	* nsd/Makefile: Added compliation directive for nsd/tclobjv.c

	* include/ns.h: Added declarations... 
 	 for following structs:
	    o. Ns_ObjvSpec
	    o. Ns_ObjvTable
	  and following calls:
	    o. Ns_ParseObjv
	    o. Ns_ObjvBool
	    o. Ns_ObjvInt
	    o. Ns_ObjvLong
	    o. Ns_ObjvWideInt
	    o. Ns_ObjvDouble
	    o. Ns_ObjvString
	    o. Ns_ObjvObj
	    o. Ns_ObjvIndex
	    o. Ns_ObjvFlags